<resources>
    <string name="app_name" translatable="false">Pulp Friction</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="interested_users">Interested Users</string>
    <string name="upload">Upload</string>
    <string name="date">Date :</string>
    <string name="time">Time :</string>
    <string name="notifications">Notifications</string>
    <string name="job_type">Job Position :</string>
    <string name="region">Region</string>
    <string name="details">Details :</string>
    <string name="my_publications">My publications</string>
    <string name="name">Name :</string>
    <string name="load_more" translatable="false">Load More</string>
    <string name="payment">Payment</string>
    <string name="job_field">Job Field</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="publications">Publications</string>
    <string name="calendar">Calendar</string>
    <string name="transactions_history">Transactions History</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="rights">Rights</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact Us</string>
    <string name="language">Language :</string>
    <string name="date_time">Date/Time</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="no_publications_found">No Publications Found</string>
    <string name="no_interested_users">No Interested Users</string>
    <string name="no_ratings_yet">No Ratings yet</string>
    <string name="experience">Work experience :</string>
    <string name="age">Age :</string>
    <string name="no_previous_jobs">No Previous Jobs</string>
    <string name="work_in_app">Work In App :</string>
    <string name="book_user">Book User</string>
    <string name="company_field_of_work" translatable="false">    Company Field Of Work :</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="work_experience">Work Experience</string>
    <string name="extra">  Extra</string>
    <string name="birthday">Birthday</string>
    <string name="verification_code">Verification Code</string>
    <string name="completed">Completed</string>
    <string name="ver_code">Verification Code :</string>
    <string name="intUsersBut">Chat</string>
    <string name="sort_by">Sort by :</string>
    <string name="appearance">Appearance :</string>
    <string name="knowledge">Knowledge :</string>
    <string name="consistency">Consistency :</string>
    <string name="behavior">Behavior :</string>
    <string name="workplace">Workplace :</string>
    <string name="rating">Rating</string>
    <string-array name="days" translatable="false">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="gender" translatable="false">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="accounType" translatable="false">
        <item>Personal</item>
        <item>Company</item>
    </string-array>
    <string-array name="months" translatable="false">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="bYears" translatable="false">
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
        <item>1959</item>
        <item>1958</item>
        <item>1957</item>
        <item>1956</item>
        <item>1955</item>
        <item>1954</item>
        <item>1953</item>
        <item>1952</item>
        <item>1951</item>
        <item>1950</item>
        <item>1949</item>
        <item>1948</item>
        <item>1947</item>
        <item>1946</item>
        <item>1945</item>
        <item>1944</item>
        <item>1943</item>
        <item>1942</item>
        <item>1941</item>
        <item>1940</item>
        <item>1939</item>
        <item>1938</item>
        <item>1937</item>
        <item>1936</item>
        <item>1935</item>
        <item>1934</item>
        <item>1933</item>
        <item>1932</item>
        <item>1931</item>
        <item>1930</item>
        <item>1929</item>
        <item>1928</item>
        <item>1927</item>
        <item>1926</item>
        <item>1925</item>
        <item>1924</item>
        <item>1923</item>
        <item>1922</item>
        <item>1921</item>
        <item>1920</item>
        <item>1919</item>
        <item>1918</item>
        <item>1917</item>
        <item>1916</item>
        <item>1915</item>
        <item>1914</item>
        <item>1913</item>
        <item>1912</item>
        <item>1911</item>
        <item>1910</item>
        <item>1909</item>
        <item>1908</item>
        <item>1907</item>
        <item>1906</item>
        <item>1905</item>
        <item>1904</item>
        <item>1903</item>
        <item>1902</item>
        <item>1901</item>
        <item>1900</item>
    </string-array>
    <string-array name="jobPos">
        <item>Topographer</item>
        <item>Cleaner</item>
        <item>Security</item>
        <item>Waiter</item>
        <item>Accountant</item>
        <item>Electrician</item>
        <item>Plumber</item>
        <item>Graphic Designer</item>
        <item>Cook</item>
        <item>Babysitter</item>
    </string-array>
    <string-array name="fjobPos">
        <item>Job position</item>
        <item>Topographer</item>
        <item>Cleaner</item>
        <item>Security</item>
        <item>Waiter</item>
        <item>Accountant</item>
        <item>Electrician</item>
        <item>Plumber</item>
        <item>Graphic Designer</item>
        <item>Cook</item>
        <item>Babysitter</item>
    </string-array>
    <string-array name="price">
        <item>Payment</item>
        <item>0 – 20 €</item>
        <item>21 – 50 €</item>
        <item>51 – 100 €</item>
        <item>101 – 150 €</item>
        <item>>150 €</item>
    </string-array>
    <string-array name="sort">
        <item>Job position</item>
        <item>Payment</item>
        <item>Date</item>
    </string-array>
    <string-array name="fieldOfWork" translatable="false">
        <item>Education</item>
        <item>Food</item>
        <item>Cleaning</item>
        <item>Accountancy</item>
    </string-array>
</resources>
