<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:id="@+id/notifications"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/notifications"
        android:textColor="#a61d1d1d"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#33000000"
        android:layout_below="@id/notifications"/>

    <Button
        android:id="@+id/rights"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/divider6"
        android:paddingStart="15dp"
        android:background="#f9f9f9"
        android:text="@string/rights"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#a61d1d1d"
        android:textSize="19sp" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#33000000"
        android:layout_below="@id/rights"/>

    <Button
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/divider5"
        android:paddingStart="15dp"
        android:background="#f9f9f9"
        android:text="@string/help"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#a61d1d1d"
        android:textSize="19sp" />

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#33000000"
        android:layout_below="@id/help"/>

    <Button
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/divider7"
        android:paddingStart="15dp"
        android:background="#f9f9f9"
        android:text="@string/contact_us"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="#a61d1d1d"
        android:textSize="19sp" />

</RelativeLayout>