<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">


    <TextView
        android:id="@+id/tV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/spJobPos"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:text="@string/job_type"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spJobPos"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_below="@+id/tV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/spinner_custom_large"
        android:entries="@array/jobPos"
        android:gravity="start"
        android:spinnerMode="dropdown"
        android:textAlignment="textStart" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spJobPos"
        android:layout_alignStart="@id/spJobPos"
        android:layout_alignEnd="@id/spJobPos"
        app:errorEnabled="false">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/region" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/region"
        android:layout_alignStart="@id/spJobPos"
        android:layout_alignEnd="@id/spJobPos"
        app:errorEnabled="false"
        android:layout_marginEnd="15dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/payment"
            android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/payment"
        android:layout_marginStart="-20dp"
        android:layout_toEndOf="@+id/payment"
        android:text="€"
        android:textSize="25sp" />

    <Button
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payment"
        android:layout_alignStart="@id/spJobPos"
        android:layout_alignEnd="@id/spJobPos"
        android:background="#f9f9f9"
        android:text="@string/date_time"
        android:textAllCaps="false"
        android:textColor="#75000000"
        android:textSize="18sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/extra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_alignStart="@id/spJobPos"
        android:layout_alignEnd="@id/spJobPos">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:hint="@string/details"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLines="10"
            android:minLines="4"
            android:scrollbars="vertical"
            android:textColorHint="#FF000000"
            android:textSize="12sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/extra"
        android:layout_centerHorizontal="true"
        android:text="@string/upload"
        android:textAllCaps="false" />

</RelativeLayout>